--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="sketch.js"></script>
     <script src="particle.js"></script>
     <script src="forces.js"></script>
+    <script src="ui.js"></script>
 
   </head>
 
